# jedi

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: jedi.puml
include/: menu.h  test.h  timer2.h  tools.h
src/: main.c  menu.c  test.c  timer2.c  tools.c
